change class for records to DTO !!! change the game !